[package]
name = "group"
version = "0.13.1"
authors = ["Sean Bowe <ewillbefull@gmail.com>", "Jack Grigg <jack@z.cash>"]
readme = "README.md"
license = "MIT/Apache-2.0"

description = "Elliptic curve group traits and utilities"
documentation = "https://docs.rs/group/"
homepage = "https://github.com/zkcrypto/group"
repository = "https://github.com/zkcrypto/group"
edition = "2021"

[dependencies]
ff = { version = "0.13.1", default-features = false, path = "../ff/" }
rand = { version = "0.8", optional = true, default-features = false }
rand_core = { version = "0.6", default-features = false, optional = true }
rand_xorshift = { version = "0.3", optional = true }
subtle = { version = "2.2.1", default-features = false }

# Crate for exposing the dynamic memory usage of the w-NAF structs.
memuse = { version = "0.2", optional = true }

[features]
default = ["alloc", "random"]
random = ["rand_core"]
alloc = []
tests = ["alloc", "rand", "rand_xorshift"]
wnaf-memuse = ["alloc", "memuse"]

[badges]
maintenance = { status = "actively-developed" }
